bk_ida/gccida/g2/set_init_index
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_init_index/src/c-typeck.c:6190:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_init_index/src/c-typeck.c:6191:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_init_index/src/c-typeck.c:6247:7: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( !constructor_range_stack_0 ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~
      constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_init_index/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_init_index/src/c-typeck.c:6261:28: error: use of undeclared identifier 'constructor_range_stack_0'
if ( !( ( unsigned __int64)constructor_range_stack_0 | ( unsigned __int64)v8) ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_init_index/src/c-typeck.c:6272:7: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( !constructor_range_stack_0 ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~
      constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_init_index/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_init_index/src/obj/c-typeck.o] Error 1
